# coder_gym

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.fleet/: run.json
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
coursesapp/: admin.py  fields.py  models.py  urls.py  views.py
coursesapp/migrations/: 0001_initial.py  0002_video_text_image_file_content.py  0003_alter_content_options_alter_module_options_and_more.py
