[tool.poetry]
name = "coder-gym"
version = "0.1.0"
description = ""
authors = ["jshuckbot <gorka_ivan@mail.ru>"]
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
